[SWOZO-11] improvements after review